--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <select id="category" class="w-full bg-white/5 border border-white/10 rounded-xl p-4 text-white outline-none focus:border-indigo-500 transition-all">
                             <optgroup label="🌅 Morning">
                                 <option value="🌅 Wake Up">🌅 Wake Up</option>
-                                <option value="🪥 Brush Teeth">🪥 Brush Teeth</option>
+                                <option value="🦷 Brush Teeth">🦷 Brush Teeth</option>
                                 <option value="💦 Wash Face">💦 Wash Face</option>
                                 <option value="🙏 Morning Prayer">🙏 Morning Prayer</option>
                                 <option value="👕 Get Dressed">👕 Get Dressed</option>
@@ -228,3 +228,4 @@
     </script>
 </body>
 </html>
+
