--- a/index.html
+++ b/index.html
@@ -66,11 +66,18 @@
 
                         <label class="text-[10px] uppercase text-gray-500 ml-2">Task Type</label>
                         <select id="category" class="w-full bg-white/5 border border-white/10 rounded-xl p-4 text-white outline-none focus:border-indigo-500 transition-all">
+                            <optgroup label="✨ Spiritual Growth">
+                                <option value="🕌 Fajr Prayer">🕌 Fajr Prayer</option>
+                                <option value="📖 Quran Recitation">📖 Quran Recitation</option>
+                                <option value="🕌 Dhuhr Prayer">🕌 Dhuhr Prayer</option>
+                                <option value="🕌 Asr Prayer">🕌 Asr Prayer</option>
+                                <option value="🕌 Maghrib Prayer">🕌 Maghrib Prayer</option>
+                                <option value="🕌 Isha Prayer">🕌 Isha Prayer</option>
+                            </optgroup>
                             <optgroup label="🌅 Morning">
                                 <option value="🌅 Wake Up">🌅 Wake Up</option>
                                 <option value="🦷 Brush Teeth">🦷 Brush Teeth</option>
                                 <option value="💦 Wash Face">💦 Wash Face</option>
-                                <option value="🙏 Morning Prayer">🙏 Morning Prayer</option>
                                 <option value="👕 Get Dressed">👕 Get Dressed</option>
                                 <option value="🍳 Breakfast">🍳 Breakfast</option>
                             </optgroup>
@@ -94,7 +101,6 @@
                                 <option value="🧩 Indoor Games">🧩 Free Time / Indoor Games</option>
                             </optgroup>
                             <optgroup label="🌙 Night">
-                                <option value="🙏 Prayer">🙏 Prayer (Evening/Night)</option>
                                 <option value="🍪 Snack Time">🍪 Snack Time</option>
                                 <option value="👨‍👩‍👦 Family Time">👨‍👩‍👦 Family / Social Time</option>
                                 <option value="🍛 Dinner">🍛 Dinner</option>
@@ -228,4 +234,3 @@
     </script>
 </body>
 </html>
-
